--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "jquery": "^3.6.3",
+    "realm-web": "^2.0.0",
     "vue": "^3.2.45"
   },
   "devDependencies": {
