--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "@types/jquery": "^3.5.14",
     "@vitejs/plugin-vue": "^4.0.0",
     "typescript": "^4.9.4",
-    "vite": "^4.0.0",
+    "vite": "^4.3.9",
     "vite-plugin-monkey": "^2.10.0",
     "vue-tsc": "^1.0.12"
+  },
+  "volta": {
+    "node": "16.20.2"
   }
 }
