--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "jquery": "^3.6.3",
-    "realm-web": "^2.0.0",
-    "vue": "^3.2.45"
   },
   "devDependencies": {
-    "@types/jquery": "^3.5.14",
+    "jquery": "^3.7.1",
+    "realm-web": "^2.0.0",
+    "vue": "^3.3.4",
+    "moment": "^2.29.4",
+    "@types/jquery": "^3.5.20",
     "@vitejs/plugin-vue": "^4.0.0",
     "typescript": "^4.9.4",
     "vite": "^4.3.9",
