--- a/package.json
+++ b/package.json
@@ -8,21 +8,24 @@
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview"
   },
-  "dependencies": {
-  },
   "devDependencies": {
+    "@types/jquery": "^3.5.21",
+    "@vitejs/plugin-vue": "^4.4.0",
     "jquery": "^3.7.1",
-    "realm-web": "^2.0.0",
-    "vue": "^3.3.4",
     "moment": "^2.29.4",
-    "@types/jquery": "^3.5.20",
-    "@vitejs/plugin-vue": "^4.0.0",
-    "typescript": "^4.9.4",
-    "vite": "^4.3.9",
-    "vite-plugin-monkey": "^2.10.0",
-    "vue-tsc": "^1.0.12"
+    "realm-web": "^2.0.0",
+    "typescript": "^5.2.2",
+    "unplugin-auto-import": "^0.16.6",
+    "unplugin-vue-components": "^0.25.2",
+    "vite": "^4.4.11",
+    "vite-plugin-monkey": "^3.5.0",
+    "vue": "^3.3.4",
+    "vue-tsc": "^1.8.15"
   },
   "volta": {
-    "node": "16.20.2"
+    "node": "18.18.0"
+  },
+  "dependencies": {
+    "element-plus": "^2.3.14"
   }
 }
