--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "isolatedModules": true,
     "esModuleInterop": true,
     "lib": ["ESNext", "DOM"],
+    "types": ["element-plus/global"],
     "skipLibCheck": true,
     "noEmit": true
   },
