--- a/package.json
+++ b/package.json
@@ -9,23 +9,26 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "@types/jquery": "^3.5.21",
+    "@types/jquery": "^3.5.22",
     "@vitejs/plugin-vue": "^4.4.0",
-    "jquery": "^3.7.1",
-    "moment": "^2.29.4",
-    "realm-web": "^2.0.0",
     "typescript": "^5.2.2",
     "unplugin-auto-import": "^0.16.6",
+    "unplugin-icons": "^0.17.0",
     "unplugin-vue-components": "^0.25.2",
     "vite": "^4.4.11",
     "vite-plugin-monkey": "^3.5.0",
-    "vue": "^3.3.4",
-    "vue-tsc": "^1.8.15"
+    "vue-tsc": "^1.8.18"
   },
   "volta": {
-    "node": "18.18.0"
+    "node": "16.20.2"
   },
   "dependencies": {
-    "element-plus": "^2.3.14"
+    "@element-plus/icons-vue": "^2.1.0",
+    "@vueuse/core": "^10.5.0",
+    "element-plus": "^2.3.14",
+    "jquery": "^3.7.1",
+    "moment": "^2.29.4",
+    "realm-web": "^2.0.0",
+    "vue": "^3.3.4"
   }
 }
