--- a/package.json
+++ b/package.json
@@ -6,39 +6,43 @@
   "scripts": {
     "build": "vue-tsc --noEmit && vite build",
     "dev": "vite -d",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "format": "prettier --write src/"
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
     "@vueuse/core": "^10.5.0",
-    "element-plus": "^2.4.0",
+    "element-plus": "^2.4.1",
     "jquery": "^3.7.1",
     "moment": "^2.29.4",
     "realm-web": "^2.0.0",
-    "vue": "^3.3.4"
+    "vue": "^3.3.7"
   },
   "devDependencies": {
+    "@babel/types": "^7.23.0",
     "@rushstack/eslint-patch": "^1.5.1",
     "@tsconfig/node18": "^18.2.2",
-    "@types/jquery": "^3.5.22",
-    "@types/node": "^18.17.17",
+    "@types/jquery": "^3.5.25",
+    "@types/node": "^20.8.10",
     "@vitejs/plugin-vue": "^4.4.0",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/tsconfig": "^0.4.0",
-    "eslint": "^8.51.0",
-    "eslint-plugin-vue": "^9.17.0",
-    "npm-run-all2": "^6.0.6",
+    "eslint": "^8.52.0",
+    "eslint-plugin-vue": "^9.18.1",
+    "npm-run-all2": "^6.1.1",
     "prettier": "^3.0.3",
-    "typescript": "^5.2.2",
-    "unplugin-auto-import": "^0.16.6",
-    "unplugin-icons": "^0.17.0",
+    "typescript": "~5.2.2",
+    "unplugin-auto-import": "^0.16.7",
+    "unplugin-icons": "^0.17.1",
     "unplugin-vue-components": "^0.25.2",
-    "vite": "^4.4.11",
-    "vite-plugin-monkey": "^3.5.0",
-    "vue-tsc": "^1.8.19"
+    "vite": "^4.5.0",
+    "vue-tsc": "^1.8.22",
+    "vite-plugin-monkey": "^3.5.0"
   },
   "volta": {
-    "node": "16.20.2"
+    "node": "18.18.2"
   }
 }
