--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "devDependencies": {
     "@babel/types": "^7.23.0",
+    "@iconify-json/fa-solid": "^1.1.5",
+    "@iconify-json/ic": "^1.1.14",
     "@rushstack/eslint-patch": "^1.5.1",
     "@tsconfig/node18": "^18.2.2",
     "@types/jquery": "^3.5.25",
@@ -39,8 +41,8 @@
     "unplugin-icons": "^0.17.1",
     "unplugin-vue-components": "^0.25.2",
     "vite": "^4.5.0",
-    "vue-tsc": "^1.8.22",
-    "vite-plugin-monkey": "^3.5.0"
+    "vite-plugin-monkey": "^3.5.0",
+    "vue-tsc": "^1.8.22"
   },
   "volta": {
     "node": "18.18.2"
