--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
     "@vueuse/core": "^10.5.0",
-    "element-plus": "^2.4.1",
+    "element-plus": "^2.7.2",
     "jquery": "^3.7.1",
     "moment": "^2.29.4",
+    "pinia": "^2.1.7",
     "realm-web": "^2.0.0",
     "vue": "^3.3.7"
   },
@@ -41,10 +42,11 @@
     "unplugin-icons": "^0.17.1",
     "unplugin-vue-components": "^0.25.2",
     "vite": "^4.5.0",
-    "vite-plugin-monkey": "^3.5.0",
-    "vue-tsc": "^1.8.22"
+    "vue-tsc": "^1.8.22",
+    "vite-plugin-monkey": "^3.5.0"
   },
   "volta": {
-    "node": "18.18.2"
+    "node": "18.18.2",
+    "npm": "10.6.0"
   }
 }
