--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@babel/types": "^7.24.5",
+    "@eslint/js": "^9.1.1",
     "@iconify-json/fa-solid": "^1.1.8",
     "@iconify-json/ic": "^1.1.17",
     "@rushstack/eslint-patch": "^1.10.2",
@@ -33,7 +34,7 @@
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/eslint-config-typescript": "^13.0.0",
     "@vue/tsconfig": "^0.5.1",
-    "eslint": "^8.52.0",
+    "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.25.0",
     "npm-run-all2": "^6.1.2",
     "prettier": "^3.2.5",
