--- a/package.json
+++ b/package.json
@@ -12,41 +12,41 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "@element-plus/icons-vue": "^2.1.0",
-    "@vueuse/core": "^10.5.0",
+    "@element-plus/icons-vue": "^2.3.1",
+    "@vueuse/core": "^10.9.0",
+    "dayjs": "^1.11.11",
     "element-plus": "^2.7.2",
     "jquery": "^3.7.1",
-    "moment": "^2.29.4",
     "pinia": "^2.1.7",
     "realm-web": "^2.0.0",
-    "vue": "^3.3.7"
+    "vue": "^3.4.26"
   },
   "devDependencies": {
-    "@babel/types": "^7.23.0",
-    "@iconify-json/fa-solid": "^1.1.5",
-    "@iconify-json/ic": "^1.1.14",
-    "@rushstack/eslint-patch": "^1.5.1",
-    "@tsconfig/node18": "^18.2.2",
-    "@types/jquery": "^3.5.25",
-    "@types/node": "^20.8.10",
-    "@vitejs/plugin-vue": "^4.4.0",
-    "@vue/eslint-config-prettier": "^8.0.0",
-    "@vue/eslint-config-typescript": "^12.0.0",
-    "@vue/tsconfig": "^0.4.0",
+    "@babel/types": "^7.24.5",
+    "@iconify-json/fa-solid": "^1.1.8",
+    "@iconify-json/ic": "^1.1.17",
+    "@rushstack/eslint-patch": "^1.10.2",
+    "@tsconfig/node18": "^18.2.4",
+    "@types/jquery": "^3.5.29",
+    "@types/node": "^20.12.7",
+    "@vitejs/plugin-vue": "^5.0.4",
+    "@vue/eslint-config-prettier": "^9.0.0",
+    "@vue/eslint-config-typescript": "^13.0.0",
+    "@vue/tsconfig": "^0.5.1",
     "eslint": "^8.52.0",
-    "eslint-plugin-vue": "^9.18.1",
-    "npm-run-all2": "^6.1.1",
-    "prettier": "^3.0.3",
-    "typescript": "~5.2.2",
-    "unplugin-auto-import": "^0.16.7",
-    "unplugin-icons": "^0.17.1",
-    "unplugin-vue-components": "^0.25.2",
-    "vite": "^4.5.0",
-    "vue-tsc": "^1.8.22",
-    "vite-plugin-monkey": "^3.5.0"
+    "eslint-plugin-vue": "^9.25.0",
+    "npm-run-all2": "^6.1.2",
+    "prettier": "^3.2.5",
+    "typescript": "~5.4.5",
+    "unplugin-auto-import": "^0.17.5",
+    "unplugin-icons": "^0.18.5",
+    "unplugin-vue-components": "^0.26.0",
+    "vite": "^5.2.10",
+    "vite-plugin-monkey": "^3.5.2",
+    "vue-tsc": "^2.0.15"
   },
   "volta": {
-    "node": "18.18.2",
+    "node": "21.7.3",
     "npm": "10.6.0"
   }
 }
