--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
     "@vueuse/core": "^10.9.0",
+    "axios": "^1.7.7",
     "dayjs": "^1.11.11",
     "element-plus": "^2.7.2",
     "jquery": "^3.7.1",
