--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "@supabase/supabase-js": "^2.46.1",
     "@vueuse/core": "^10.9.0",
     "axios": "^1.7.7",
     "dayjs": "^1.11.11",
     "element-plus": "^2.7.2",
     "jquery": "^3.7.1",
+    "mongodb": "^6.10.0",
     "pinia": "^2.1.7",
     "realm-web": "^2.0.0",
     "vue": "^3.4.26"
@@ -43,7 +45,7 @@
     "unplugin-auto-import": "^0.17.5",
     "unplugin-icons": "^0.18.5",
     "unplugin-vue-components": "^0.26.0",
-    "vite": "^5.2.10",
+    "vite": "5.4.6",
     "vite-plugin-monkey": "^4.0.6",
     "vue-tsc": "^2.0.15"
   },
