--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,10 +28,28 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
 
-    - name: GitHub Pages
-      uses: crazy-max/ghaction-github-pages@v4.1.0
+    - name: Upload GitHub Pages artifact
+      uses: actions/upload-pages-artifact@v3.0.1
       with:
-        # Git branch where assets will be deployed
-        # target_branch: # optional, default is gh-pages
-        # Build directory to deploy
-        build_dir: dist/
+        # Path of the directory containing the static assets.
+        path: dist/
+  deploy:
+      # Add a dependency to the build job
+      needs: build
+
+      # Grant GITHUB_TOKEN the permissions required to make a Pages deployment
+      permissions:
+        pages: write      # to deploy to Pages
+        id-token: write   # to verify the deployment originates from an appropriate source
+
+      # Deploy to the github-pages environment
+      environment:
+        name: github-pages
+        url: ${{ steps.deployment.outputs.page_url }}
+
+      # Specify runner + deployment step
+      runs-on: ubuntu-latest
+      steps:
+        - name: Deploy to GitHub Pages
+          id: deployment
+          uses: actions/deploy-pages@v4 # or specific "vX.X.X" version tag for this action
