--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -32,7 +32,8 @@ jobs:
       run: | 
         meta_path="dist/mansion.meta.js"
         user_path="dist/mansion.user.js"
-        current_date=$(TZ='Asia/Shanghai' date +"%Y-%m-%d_%H-%M") 
+        current_date=$(TZ='Asia/Shanghai' date +"%Y-%m-%d_%H-%M")
+        echo "current_date: $current_date"
         sed -i "s|// @version[[:space:]]*1.0.0|// @version $current_date|" "$meta_path"
         sed -i "s|// @version[[:space:]]*1.0.0|// @version $current_date|" "$user_path"
 
