--- a/.github/workflows/notify.yml
+++ b/.github/workflows/notify.yml
@@ -3,7 +3,7 @@ name: Send WeChat Notification on Completion
 on:
   workflow_run:
     types: ['completed']
-    jobs: ['all']
+    workflows: ["*"]
 
 jobs:
   send-wechat-notification-on-success:
