--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -29,7 +29,7 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
 
-    - name: Upload GitHub Pages artifact
+    - name: Rename version
       run: | 
         meta_path="dist/mansion.meta.js"
         user_path="dist/mansion.user.js"
