--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -4,7 +4,5 @@
   "tabWidth": 2,
   "singleQuote": true,
   "printWidth": 120,
-  "trailingComma": "none",
-  "plugins": ["prettier-plugin-tailwindcss"],
-  "tailwindStylesheet": "./src/style.css"
+  "trailingComma": "none"
 }
