--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -26,6 +26,7 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run build --if-present
+    - run: cp index.html dist/
 
     - name: Upload GitHub Pages artifact
       uses: actions/upload-pages-artifact@v3.0.1
@@ -50,4 +51,4 @@ jobs:
       steps:
         - name: Deploy to GitHub Pages
           id: deployment
-          uses: actions/deploy-pages@v4.0.5 # or specific "vX.X.X" version tag for this action
+          uses: actions/deploy-pages@v4 # or specific "vX.X.X" version tag for this action
