--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -27,9 +27,8 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
 
-    - name: Upload static files as artifact
-      id: deployment
-      uses: actions/upload-pages-artifact@v3
+    - name: Upload GitHub Pages artifact
+      uses: actions/upload-pages-artifact@v3.0.1
       with:
         # Path of the directory containing the static assets.
         path: dist/
@@ -51,4 +50,4 @@ jobs:
       steps:
         - name: Deploy to GitHub Pages
           id: deployment
-          uses: actions/deploy-pages@v4.0.5 # or specific "vX.X.X" version tag for this action
+          uses: actions/deploy-pages@v4 # or specific "vX.X.X" version tag for this action
